<resources>
    <string name="app_name">blu</string>
    <string name="splash_desc">BCA Digital terdaftar dan diawasi oleh Otoritas Jasa Keuangan.\n\nBCA Digital merupakan peserta penjaminan LPS.\n\nblubybcadigital.id</string>
    <string name="halo_name">Halo, %s</string>
    <string name="btn_fees_rates"><u>Fees &amp; Rates</u></string>
    <string name="message_login_kita_mulai">Oke, kita mulai..\nMasukkan no. handphone kamu</string>
    <string name="hint_login_no_handphone">No. Handphone</string>
    <string name="btn_next">Lanjut</string>
    <string name="message_otp_verification_number">Verifikasi nomor kamu</string>
    <string name="passcode_enter_pin">Masukkan PIN</string>
    <string name="btn_forgot_password"><u>Lupa Password?</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_good_day_s">Good Day, %s</string>
    <string name="lbl_transaction_favorite">Transaksi Favorit</string>
    <string name="lbl_see_all">lihat semua</string>
    <string name="lbl_insight">Insight</string>
    <string name="lbl_tansaction">Transaksi</string>
</resources>